apply decimal rule for ranking, fix scrollbar problem at ranking

--- a/entrak/static/css/ranking.css
+++ b/entrak/static/css/ranking.css
@@ -78,7 +78,7 @@
 
 #ranking-item-container {
 	height: 490px;
-	overflow: scroll;
+	overflow-y: auto;
 	margin-top: 0px !important;
 	margin-bottom: 60px;
 }
